# a-piece-of-pisi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: converter.rs  lib.rs  main.rs
src/eopkg/: index.rs  mod.rs
test/: eopkg-index.xml.xz
