[package]
name = "a-piece-of-pisi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
futures = { version = "0.3.28", features = ["futures-executor", "thread-pool"] }
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
rust-lzma = "0.6.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["full"] }
