[package]
name = "a-piece-of-pisi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
color-eyre = "0.6.2"
const-hex = "1.10.0"
crossterm = "0.27.0"
dag = { git = "https://github.com/serpent-os/moss-rs.git", version = "0.1.0" }
futures = { version = "0.3.29", features = ["futures-executor", "thread-pool"] }
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
rust-lzma = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_yaml = "0.9.27"
sha2 = { version = "0.10.8", features = ["asm", "sha2-asm"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
