[package]
name = "a-piece-of-pisi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
color-eyre = "0.6.3"
const-hex = "1.11.3"
crossterm = "0.27.0"
dag = { git = "https://github.com/serpent-os/moss-rs.git", version = "0.1.0" }
futures = { version = "0.3.30", features = ["futures-executor", "thread-pool"] }
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["rustls-tls"] }
rust-lzma = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_yaml = "0.9.29"
sha2 = { version = "0.10.8", features = ["asm", "sha2-asm"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
